tests/ui/parser/misspelled-macro-rules.stderr
error: expected one of `(`, `[`, or `{`, found `thing`
  --> $DIR/misspelled-macro-rules.rs:7:14
   |
LL | marco_rules! thing {
   |              ^^^^^ expected one of `(`, `[`, or `{`
   |
help: perhaps you meant to define a macro
   |
LL | macro_rules! thing {
   | ~~~~~~~~~~~

error: aborting due to 1 previous error

